fixed screen shift on modal opening

--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -23,6 +23,7 @@
 
 .noscroll { 
   position:fixed;
+  width: 100vw;
   overflow: hidden;
 }
 
